# Tab

./: .env.example  .gitignore  CHANGELOG  CLAUDE.md  README.md  pyproject.toml  settings.json
.claude/: launch.json
.claude-plugin/: marketplace.json  plugin.json
agents/: _base.md  code-reviewer.md  implementer.md  researcher.md  reviewer.md  tab.md
agents/advisor/: AGENT.md
agents/base/: AGENT.md
agents/bootstrap/: AGENT.md
agents/coder/: AGENT.md
agents/orchestrator/: AGENT.md
agents/researcher/: AGENT.md
agents/tab/: AGENT.md
agents/writer/: AGENT.md
cli/: README.md  pyproject.toml
cli/src/tab_cli/: chat.py  cli.py  config.py  grimoire_overrides.py  personality.py  registry.py  skills.py
cli/src/tab_cli/models/: __init__.py  ollama_native.py
cli/tests/: conftest.py  test_ask.py  test_chat.py  test_cli_grimoire.py  test_config.py  test_dispatch_eval.py  test_draw_dino.py  test_grimoire_overrides.py  test_listen.py  test_mcp_server.py  test_ollama_native.py  test_personality.py  test_registry.py  test_resolver.py  test_skills.py  test_teach.py  test_think.py
cli/tests/fixtures/: dispatch_eval.json
commands/: add-agent.md  add-command.md  add-rule.md  add-skill.md  doot.md
commands/add-component/: add-component.md
commands/create-agent/: create-agent.md
commands/create-command/: create-command.md
commands/create-rule/: create-rule.md
commands/create-skill/: create-skill.md
commands/tab/: doot.md
docs/: agent-teams.md  architecture.md  project-agents.md  recommended-settings.json  setup.md  skills.md  tab-agent.md  walkthrough.md
docs/plans/: 2026-02-25-4gents-design.md  2026-02-25-4gents-implementation-plan.md  2026-02-25-tab-design.md  2026-02-25-tab-implementation-plan.md  2026-02-27-tab-create-skills-design.md  2026-02-27-tab-create-skills.md  2026-02-28-add-component.md  2026-02-28-flatten-command-structure.md  2026-02-28-research-skill-design.md  2026-02-28-research-skill.md  2026-02-28-summon-tab-design.md  2026-02-28-type-specific-commands-design.md  2026-02-28-type-specific-commands.md  2026-03-01-bootstrap-agent-design.md  2026-03-01-bootstrap-agent-plan.md  2026-03-02-base-agent-tone-design.md  (+6 more)
evals/: CONVENTIONS.md  README.md  grader.md  rubric.md
hooks/: filesystem-guard.sh  hooks.json
research/: claude-agent-best-practices.md
schemas/: role.schema.json
scripts/: serve-markdown.js  validate-plugins.sh  validate_role.py
src/: __init__.py  cli.py  loader.py  runner.py  tools.py
tab/: CHANGELOG.md
tab-for-projects/: CHANGELOG.md  settings.json
(+175 files in other folders)
